# TestLibrary

./: CMakeLists.txt  testlib.h
backCompWithMike/: InStream.cpp  InStream.h  TestlibFuncs.cpp  TestlibFuncs.h  TestlibGlobals.h  pattern.cpp  pattern.h  random_t.cpp  random_t.h
checkers/: acmp.cpp  ncmp.cpp
inOneFile/: testlib.h
inOneFle/: TestLibrary.h
include/: AbstractFileReader.h  AbstractPartOfFileReader.h  AbstractReader.h  Compares.h  FileReader.h  Logger.h  PartOfFileReader.h  PartOfStdinReader.h  ResultWriter.h  StandardReaders.h  StdinReader.h  StringTools.h  TestLibraryIOSettings.h  TestLibrarySecure.h  TestLibraySecure.h
input/: input
src/: AbstractFileReader.cpp  AbstractPartOfFileReader.cpp  AbstractReader.cpp  Compares.cpp  FileReader.cpp  Logger.cpp  PartOfFileReader.cpp  PartOfStdinReader.cpp  ResultWriter.cpp  StandardReaders.cpp  StdinReader.cpp  StringTools.cpp  main.cpp
